# homeassistant-custom-components-catholic-calendar

./: .geminiignore  .gitignore  README.md  hacs.json  pyproject.toml  requirements.txt  version-manager.skill
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.gemini/skills/version-manager/: SKILL.md
.gemini/skills/version-manager/scripts/: bump_version.py
custom_components/catholic_calendar/: __init__.py  calendar.py  calendar_generator.py  config_flow.py  coordinator.py  liturgical_grade.py  liturgical_season.py  manifest.json  sensor.py
custom_components/catholic_calendar/translations/: en.json
scripts/: pre-commit-quality.py  pre-commit-runner.py  pre-commit-version.py
tests/: conftest.py  test_coordinator.py
