[project]
name = "catholic_calendar"
version = "1.0.1"
description = "Catholic Calendar for Home Assistant"
readme = "README.md"
requires-python = ">=3.14"

[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [
    "ha_core",
    "venv",
]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "S",   # flake8-bandit
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.14"
show_error_codes = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = [
    "ha_core",
    "venv",
]

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "voluptuous.*",
]
ignore_missing_imports = true
